article/thinkit-smallplatform/03-backstage-software-template/shared-gateway/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: shared-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    # Keycloak用リスナー
    - name: keycloak
      protocol: HTTP
      port: 80
      hostname: keycloak.172.32.4.127.nip.io
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
        kinds:
          - kind: HTTPRoute
    # echo API用リスナー (テナント)
    - name: echo
      protocol: HTTP
      port: 80
      hostname: "echo.172.32.4.127.nip.io"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: echo
        kinds:
          - kind: HTTPRoute
    # template-app用リスナー (テナント)
    - name: template-app
      protocol: HTTP
      port: 80
      hostname: "template-app.172.32.4.127.nip.io"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: template-app
        kinds:
          - kind: HTTPRoute
    # backstage用リスナー (テナント)
    - name: backstage
      protocol: HTTP
      port: 80
      hostname: "backstage.172.32.4.127.nip.io"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: backstage
        kinds:
          - kind: HTTPRoute
    # my-app用リスナー (テナント)
    - name: my-app
      protocol: HTTP
      port: 80
      hostname: "my-app.172.32.4.127.nip.io"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: my-app
        kinds:
          - kind: HTTPRoute
